[tool.poetry]
name = "aula-01"
version = "0.1.0"
description = ""
authors = ["eduardopanissa <eduardo_panissa@hotmail.com>"]
readme = "README.md"
packages = [{include = "aula_01"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
